# remove_tangential_distortion

./: README.md  pyproject.toml
src/: test.ipynb
src/remove_tangential_distortion/: __init__.py  process_folder.py
