[build-system]
requires = ["hatchling", "setuptools", "setuptools-scm"]
#build-backend = "hatchling.build"
build-backend = "setuptools.build_meta"

[project]
name = "remove_tangential_distortion"
version = "0.0.1"
authors = [
  { name="Vicente González Ruiz", email="vicente.gonzalez.ruiz@gmail.com" },
]
description = "Tools for removing the tangential distortion in a collection of images"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/vicente-gonzalez-ruiz/remove_tangential_distortion"
"Bug Tracker" = "https://github.com/vicente-gonzalez-ruiz/remove_tangential_distortion/issues"

